# stellar-forms

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  agents.md  eslint.config.js  index.html  package-lock.json  package.json  requirement.md  tailwind.config.js  vitest.config.ts
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/forms/: Cargo.toml
contracts/forms/src/: lib.rs
contracts/forms/test_snapshots/test/: test_create_and_query_form.1.json  test_update_and_disable_form.1.json
contracts/payments/: Cargo.toml
contracts/payments/src/: lib.rs
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/components/: Header.tsx  WalletModal.tsx
src/config/: contracts.ts
src/context/: WalletContext.tsx
src/layouts/: DashboardLayout.tsx
src/pages/: CreateForm.tsx  DashboardHome.tsx  LandingPage.tsx  PaymentPage.tsx  ReceiptPage.tsx
src/utils/: mockStorage.test.ts  mockStorage.ts
